Fix #1527 - borders warn if conductor too close

--- a/sirepo/package_data/static/css/warpvnd.css
+++ b/sirepo/package_data/static/css/warpvnd.css
@@ -5,7 +5,7 @@
   fill: white;
 }
 .warpvnd-inset-tile-warning {
-  stroke: orange;
+  stroke: red;
 }
 .warpvnd-plate {
   stroke: rgb(228, 176, 95);
